<resources>
    <string name="app_name">TEWU</string>
    <string name="map">Journey Map</string>
    <string name="map_home_page">Home Map</string>
    <string name="map_work_page">Work Map</string>
    <string name="activity_1">Activity 1</string>
    <string name="open_activity_2">open activity 2</string>
    <string name="create_a_notification">Create a Notification</string>
    <string name="confirm_destination">Confirm Destination</string>
    <string name="show_start_locationn">Show Start Locationn</string>
    <string name="show_current_location">Show Current Location</string>
    <string name="show_destination">Show Destination</string>
    <string name="show_distance">Show Distance</string>
    <string name="show_start_location">Show Start Location</string>
    <string name="remember_to_take_your_valuables_with_you">Remember to take your valuables with you:</string>
    <string name="open_map">Open Map</string>
    <string name="take_everything_with_you">Take Everything With You</string>
    <string name="take_your_valuables_with_you">Take Your Valuables With You</string>
    <string name="jackets_sweaters">Jackets/Sweaters</string>
    <string name="mobile_devices">Mobile Devices</string>
    <string name="bags_and_shoppers">Bags and Shoppers</string>
    <string name="todo">TODO</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="a_project_by_bscs_10a">A Project by BSCS 10A</string>
    <string name="back">Back</string>
    <string name="journey">journey</string>
    <string name="reminddistance">reminddistance</string>
    <string name="work">work</string>
    <string name="home">home</string>
    <string name="set_home_location">Set Home Location</string>
    <string name="textview">TextView</string>
    <string name="begin_journey">Begin Journey</string>
    <string name="set_distance_for_reminder">Set Distance for Reminder</string>
    <string name="set_work_location">Set Work Location</string>
    <string name="welcome">welcome</string>
    <string name="distance_in_miles">Distance in miles</string>
    <string name="set_distance">Set Distance</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="standard_view_map">Standard View Map</string>
    <string name="retro_view_map">Retro View Map</string>
    <string name="night_view_map">Night View Map</string>
    <string name="open_menu">Open Menu</string>
</resources>