<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/welcomeimage"
        android:layout_width="354dp"
        android:layout_height="357dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon"
        tools:layout_editor_absoluteY="7dp" />

    <Button
        android:id="@+id/homebutton"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="215dp"
        android:layout_marginLeft="215dp"
        android:layout_marginBottom="95dp"
        android:text="@string/set_home_location"
        app:backgroundTint="#FF9800"
        tools:text="Set Home Location" />

    <Button
        android:id="@+id/workbutton"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginBottom="95dp"
        android:text="@string/set_work_location"
        app:backgroundTint="#3F51B5"
        tools:text="Set Work Location" />

    <Button
        android:id="@+id/journey"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginBottom="155dp"
        android:text="@string/begin_journey"
        app:backgroundTint="#8BC34A"
        tools:text="Begin Journey" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="220dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:text="welcome" />

    <Button
        android:id="@+id/notificationsettings"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginBottom="47dp"
        android:text="@string/notification_settings"
        app:backgroundTint="#00BCD4"
        tools:text="Notification Settings" />

</RelativeLayout>